--- a/app/src/main/res/layout/activity_5.xml
+++ b/app/src/main/res/layout/activity_5.xml
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-250dp"
         android:ems="10"
-        android:hint="Add text"
+        android:hint="keyword"
         android:inputType="phone" />
 
     <Button
