--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
         android:layout_marginTop="241dp"
         android:layout_marginEnd="141dp"
         android:text="Black List"
-        android:textAllCaps="true" />
+        android:textAllCaps="true"
+        android:textColorHighlight="#3F51B5" />
 
     <Button
         android:id="@+id/WLbutton"
@@ -37,7 +38,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="141dp"
         android:text="White List"
-        android:textAllCaps="true" />
+        android:textAllCaps="true"
+        android:textColorHighlight="#0D1855"
+        android:textColorLink="#30419C" />
 
     <Button
         android:id="@+id/MSbutton"
