--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/keywordmanager.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/keywordmanager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Keywordmanager">
+    tools:context=".screens.KeywordManager">
 
     <TextView
         android:id="@+id/textView"
@@ -43,6 +43,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/button"
-        android:layout_margin="20dp" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp" />
 
 </RelativeLayout>
