make the text fields data type limited done make eval mailbox view 	listview that displays messages from a string. 	if clicked then an alert bubble pops up that allows us to select an option 		flag messages deletes from database and adds number to the blacklist 		approve message appends the message to the sms/inbox file. 		cancel make it so reporting a message adds the number to the blacklist. make delete message clearer on all prompts

--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/activity_main.xml
@@ -64,4 +64,16 @@
         android:text="Keyword"
         android:textAllCaps="true" />
 
+    <Button
+        android:id="@+id/eval_mailbox_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/BLbutton"
+        android:layout_alignBottom="@+id/KWbutton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="-78dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="235dp"
+        android:text="Evaluation Mailbox" />
+
 </RelativeLayout>
