--- a/Frontend/smsfilteringapplication/app/src/main/res/drawable/rounded_corner.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/drawable/rounded_corner.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="#ffffff" />
+        android:color="@color/black" />
 
     <solid android:color= "#779ECB" />
 
