--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/blacklist_whitelist_item_layout.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/blacklist_whitelist_item_layout.xml
@@ -17,9 +17,11 @@
         android:text="TextView"
         android:textAllCaps="false"
         android:textSize="20sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
