--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/dialogue_add_item.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/dialogue_add_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    >
 
     <EditText
         android:id="@+id/editTextItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter item name"/>
-
+        android:hint="Enter item name"
+        />
 </LinearLayout>
