--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/eval_mailbox.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/eval_mailbox.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,34 +8,59 @@
         android:id="@+id/eval_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignBottom="@id/eval_listview"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="60dp"></ListView>
+        android:layout_below="@+id/evallabel"
+        android:layout_marginTop="0dp"
+        android:backgroundTint="@color/black"
+        android:background="@color/black"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"></ListView>
 
+
+    <TextView
+        android:id="@+id/evallabel"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/darkPastelBlue"
+        android:text=""
+
+        ></TextView>
+
+    <TextView
+        android:id="@+id/eval_textView"
+        android:layout_width="131dp"
+        android:layout_height="38dp"
+        android:layout_above="@+id/eval_listview"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="138dp"
+        android:layout_marginBottom="12dp"
+        android:text="Evaluate"
+        android:textColor="@color/white"
+        android:textSize="30dp" />
     <Button
         android:id="@+id/eval_mainmenubtn"
-        android:layout_width="wrap_content"
+        android:layout_width="201dp"
         android:layout_height="wrap_content"
-
-        android:text="main menu"
-        app:layout_constraintBottom_toTopOf="@+id/eval_listview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignBottom="@id/eval_listview"
+        android:radius = "0dp"
+        android:backgroundTint="@color/darkPastelBlue"
+        android:text="Main Menu" />
 
     <Button
         android:id="@+id/eval_additembtn"
-        android:layout_width="wrap_content"
+        android:layout_width="196dp"
         android:layout_height="wrap_content"
 
+        android:layout_alignBottom="@id/eval_listview"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="-152dp"
+        android:layout_toEndOf="@+id/eval_mainmenubtn"
+        android:backgroundTint="@color/darkPastelBlue"
+        android:text="Refresh"/>
 
-        android:text="refresh messages"
-        app:layout_constraintBottom_toTopOf="@+id/eval_listview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/eval_mainmenubtn"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
