--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/messagereporting.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/messagereporting.xml
@@ -10,27 +10,58 @@
         android:id="@+id/message_reporting_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignBottom="@id/message_reporting_listview"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="60dp"></ListView>
+        android:layout_below="@+id/reportlabel"
+        android:layout_marginTop="0dp"
+        android:backgroundTint="@color/black"
+        android:background="@color/black"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"></ListView>
+    <TextView
+        android:id="@+id/reportlabel"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/darkPastelGreen"
+        android:text=""
 
+        ></TextView>
+
+    <TextView
+        android:id="@+id/report_textView"
+        android:layout_width="131dp"
+        android:layout_height="38dp"
+        android:layout_above="@+id/message_reporting_listview"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="138dp"
+        android:layout_marginBottom="12dp"
+        android:text="Reporting"
+        android:textColor="@color/white"
+        android:textSize="30dp" />
     <Button
         android:id="@+id/message_reporting_mainmenubtn"
-        android:layout_width="wrap_content"
+        android:layout_width="201dp"
         android:layout_height="wrap_content"
-
-        android:text="main menu" />
+        android:layout_alignBottom="@id/message_reporting_listview"
+        android:radius = "0dp"
+        android:backgroundTint="@color/darkPastelGreen"
+        android:text="Main Menu"/>
 
     <Button
         android:id="@+id/message_reporting_additembtn"
-        android:layout_width="wrap_content"
+        android:layout_width="196dp"
         android:layout_height="wrap_content"
 
+        android:layout_alignBottom="@id/message_reporting_listview"
         android:layout_alignParentEnd="true"
-
+        android:layout_marginStart="3dp"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="-152dp"
-        android:text="refresh messages" />
+        android:layout_toEndOf="@+id/message_reporting_mainmenubtn"
+        android:backgroundTint="@color/darkPastelGreen"
+        android:text="Refresh"/>
 
 
 </RelativeLayout>
