--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/whitelist.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/whitelist.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/darkPastelRed"
-        android:text="Whitelist"
+        android:text=""
 
         ></TextView>
 
