--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/keywordmanager.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/keywordmanager.xml
@@ -60,7 +60,7 @@
         android:layout_marginRight="-152dp"
         android:layout_toEndOf="@+id/keyword_mainmenubtn"
         android:backgroundTint="@color/darkPastelOrange"
-        android:text="Add Number"
+        android:text="Add keyword"
         />
 
 </RelativeLayout>
