--- a/Frontend/smsfilteringapplication/app/src/main/res/layout/messagereporting.xml
+++ b/Frontend/smsfilteringapplication/app/src/main/res/layout/messagereporting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.Messagereporting">
+    tools:context=".screens.MessageReporting">
 
     <ListView
         android:id="@+id/message_reporting_listview"
